[package]
name = "gemserv"
version = "0.6.7"
authors = ["Calacuda <eowest@gmail.com>"]
edition = "2018"
description = "A gemini server"
keywords = ["server", "gemini", "protocol"]
categories = ["network-programming"]
readme = "README.md"
homepage = "https://github.com/calacuda/gemserv"
repository = "https://github.com/calacuda/gemserv.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = [ "full" ] }
rustls-pemfile = "0.2.1"
futures-util = "0.3.30"
toml = "0.5.11"
serde = "1.0.203"
serde_derive = "1.0.203"
url = "2.5.2"
new_mime_guess = "3.0.2"
mime = "0.3.17"
log = "0.4.21"
simple_logger = "1.16"
sha2 = "0.9.9"
x509-parser = "0.12"
regex = "1.10.5"
lazy_static = "1.5.0"

[dependencies.tokio-rustls]
version = "0.23.4"
optional = false
features = ["dangerous_configuration"]

[features]
default = [ "cgi", "scgi", "proxy" ]
cgi = []
scgi = []
proxy = []

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [ "cgi-scripts/agena-cgi" ]
